# par2deep2

./: .gitignore  .gitmodules  CMakeLists.txt  README  par2deep2.kdev4
src/: constants.h  gui.cpp  gui.h  main.cpp  par2deep2.cpp  par2deep2.h
